mudanças visuais, finalização do projetin

--- a/FrontEnd/jqxTreeAngular/src/index.html
+++ b/FrontEnd/jqxTreeAngular/src/index.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+      <div class="titulo"><h1>Versionamento SPF</h1></div>
+        <h2 class="subtitulo">Versões:</h2>
         <app-root>Loading...</app-root>
     </body>
 </html>
